...

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <Button
            android:id="@+id/google_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:drawableLeft="@drawable/abc_vector_test"
            android:elevation="8dp"
            android:text="Sign In with Google"
            android:textColor="#fff" />



        <TextView
            android:layout_width="match_parent"
...
