...
        app:layout_constraintVertical_bias="0.0">


    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_naviagtion"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        app:itemIconTint="@drawable/selector"
...
        app:menu="@menu/menu_navigation"
        tools:ignore="MissingConstraints">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_btn"
        android:layout_width="182dp"
        android:layout_height="138dp"
        android:layout_gravity="center|bottom"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#13698F"
...
