<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10sp"
    android:layout_margin="1sp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="10sp"
    app:cardElevation="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25sp"
        android:orientation="horizontal"

        >
        <TextView
            android:id="@+id/Ques_title"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Description"

            />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <ImageButton
               android:id="@+id/btn_delete"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@android:color/transparent"
               android:padding="15sp"
               android:src="@drawable/ic_baseline_delete_24">

           </ImageButton>

           <ImageButton
               android:id="@+id/btn_edit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@android:color/transparent"
               android:padding="15sp"
               android:src="@drawable/ic_baseline_edit_24">

           </ImageButton>

       </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>